switch to less aggressive min-height (bug 42702)
it seems that on Nokia E52 the Issues heading spills out due
to a browser glitch

this makes the header larger on that phone so the header is still
readable

this also provides an interim solution for bug 42702

--- a/stylesheets/less/common/mf-navigation.less
+++ b/stylesheets/less/common/mf-navigation.less
@@ -320,7 +320,7 @@ html.overlay {
 	border-bottom: solid 1px #CCC;
 	padding: 0;
 	color: #666;
-	height: @headerHeight;
+	min-height: @headerHeight;
 	margin: 0;
 	padding-bottom: 0;
 
